add OpenTelemetry